# SurfaceDrawing

./: .gitignore  CMakeLists.txt  Dockerfile  GraphicsViewTests.sln  SurfaceDrawing.sln
GraphicsViewTests/: ColorSwatch.cpp  ColorSwatch.h  GraphicsViewTests.vcxproj  GraphicsViewTests.vcxproj.filters  cMainWindow.cpp  cMainWindow.h  cMainWindow.qrc  cMainWindow.ui  colorPicker.cpp  colorPicker.h  colorPickerDialog.cpp  colorPickerDialog.h  main.cpp  powerslider.cpp  powerslider.h
GraphicsViewTests/GeneratedFiles/: qrc_cMainWindow.cpp  ui_cMainWindow.h
GraphicsViewTests/src/: Canvas.cpp  Canvas.h  EditableItem.cpp  EditableItem.h  ToolModel.cpp  ToolModel.h  cAddItem.cpp  cAddItem.h  cCurrentFrameItem.cpp  cCurrentFrameItem.h  cCustomGraphicsView.cpp  cCustomGraphicsView.h  cGraphicItem.cpp  cGraphicItem.h  cGridItem.cpp  cGridItem.h  cItem.cpp  cItem.h
SurfaceDrawing/: CircularBuffer.h  ConnectionDialog.ui  Defines.h  SurfaceDrawing.cpp  SurfaceDrawing.h  SurfaceDrawing.qrc  SurfaceDrawing.ui  SurfaceDrawing.vcxproj  SurfaceDrawing.vcxproj.filters  TickerTimer.h  cBasicTile.cpp  cBasicTile.h  cBordersItem.cpp  cBordersItem.h  cCanvas.cpp  cCanvas.h  cClient.cpp  cClient.h  cComp.cpp  cComp.h  cConnectionDialog.cpp  cConnectionDialog.h  cHash.h  cItemGrid.cpp  cItemGrid.h  cItemPlayfield.cpp  cItemPlayfield.h  cItemUser.cpp  cItemUser.h  cPaperLogic.cpp  cPaperLogic.h  cServer.cpp  cServer.h  cUICompBar.cpp  cUICompBar.h  cUIItemComp.cpp  cUIItemComp.h  cUIItemPlayerStat.cpp  cUIItemPlayerStat.h  cUser.cpp  (+3 more)
SurfaceDrawing/DEBUGLOGS/: ClientLOGS.txt  ServerLogs.txt
SurfaceDrawing/GeneratedFiles/: qrc_SurfaceDrawing.cpp  ui_ConnectionDialog.h  ui_SurfaceDrawing.h
SurfaceDrawing/GeneratedFiles/DebugClient/: moc_SurfaceDrawing.cpp  moc_cCanvas.cpp  moc_cClient.cpp
SurfaceDrawing/GeneratedFiles/DebugServer/: moc_cClient.cpp  moc_cServer.cpp
SurfaceDrawing/GeneratedFiles/ReleaseServer/: moc_cClient.cpp
